Add build for other JDK versions