@@ -1,3 +1,3 @@
 #!/bin/sh
 cd ./otoroshi
-./bin/otoroshi -Dhttp.port=8080 "$@"
+./bin/otoroshi -Dhttp.port=8080 "$@" -XX:+IgnoreUnrecognizedVMOptions --add-modules=java.xml.bind --illegal-access=warn
